--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
+    "cors": "^2.4.2",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
